more mobile frendly

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
+    <!-- Performance Loader - Chargé en premier pour optimiser les performances -->
+    <script src="js/performance-loader.js"></script>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
@@ -50,6 +52,8 @@
     <link rel="stylesheet" href="css/additional-styles.css" />
     <link rel="stylesheet" href="css/mobile-optimizations.css" />
     <link rel="stylesheet" href="css/touch-optimizations.css" />
+    <link rel="stylesheet" href="css/performance-optimizations.css" />
+    <link rel="stylesheet" href="css/accessibility-optimizations.css" />
     <link rel="stylesheet" href="css/print.css" media="print" />
 
     <style>
@@ -1129,6 +1133,8 @@
 
     <!-- Custom JavaScript -->
     <script src="js/responsive-handler.js"></script>
+    <script src="js/mobile-navigation.js"></script>
+    <script src="js/mobile-forms.js"></script>
     <script src="js/main.js"></script>
     <script src="js/image-optimizations.js"></script>
   </body>
