--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
     <link rel="stylesheet" href="css/touch-optimizations.css" />
     <link rel="stylesheet" href="css/performance-optimizations.css" />
     <link rel="stylesheet" href="css/accessibility-optimizations.css" />
+    <link rel="stylesheet" href="css/contrast-optimizations.css" />
+    <link rel="stylesheet" href="css/contrast-controls.css" />
     <link rel="stylesheet" href="css/print.css" media="print" />
 
     <style>
@@ -1135,6 +1137,7 @@
     <script src="js/responsive-handler.js"></script>
     <script src="js/mobile-navigation.js"></script>
     <script src="js/mobile-forms.js"></script>
+    <script src="js/contrast-controls.js"></script>
     <script src="js/main.js"></script>
     <script src="js/image-optimizations.js"></script>
   </body>
