Améliorer les gestes de balayage pour la navigation

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
     <link rel="stylesheet" href="css/contrast-optimizations.css" />
     <link rel="stylesheet" href="css/contrast-controls.css" />
     <link rel="stylesheet" href="css/haptic-feedback.css" />
+    <link rel="stylesheet" href="css/swipe-navigation.css" />
     <link rel="stylesheet" href="css/print.css" media="print" />
 
     <style>
@@ -1157,6 +1158,7 @@
     <script src="js/contrast-controls.js"></script>
     <script src="js/haptic-feedback.js"></script>
     <script src="js/vibration-test.js"></script>
+    <script src="js/swipe-navigation.js"></script>
     <script src="js/main.js"></script>
     <script src="js/image-optimizations.js"></script>
   </body>
