--- a/index.html
+++ b/index.html
@@ -58,12 +58,13 @@
     <link rel="stylesheet" href="css/contrast-controls.css" />
     <link rel="stylesheet" href="css/haptic-feedback.css" />
     <link rel="stylesheet" href="css/swipe-navigation.css" />
+    <link rel="stylesheet" href="css/contrast-improvements.css" />
     <link rel="stylesheet" href="css/print.css" media="print" />
 
     <style>
       /* Styles spécifiques pour la section oxygénothérapie */
       .oxygen-therapy-section {
-        background: linear-gradient(135deg, #e6f7ff, #ffffff);
+        /* Le style de fond est maintenant géré dans contrast-improvements.css */
         padding: 80px 0;
         position: relative;
         overflow: hidden;
