--- a/index.html
+++ b/index.html
@@ -55,10 +55,11 @@
     <link rel="stylesheet" href="css/performance-optimizations.css" />
     <link rel="stylesheet" href="css/accessibility-optimizations.css" />
     <link rel="stylesheet" href="css/contrast-optimizations.css" />
-    <link rel="stylesheet" href="css/contrast-controls.css" />
+    <link rel="stylesheet" href="css/contrast-controls-fixed.css" />
     <link rel="stylesheet" href="css/haptic-feedback.css" />
     <link rel="stylesheet" href="css/swipe-navigation.css" />
     <link rel="stylesheet" href="css/contrast-improvements.css" />
+    <link rel="stylesheet" href="css/mobile-fixes.css" />
     <link rel="stylesheet" href="css/print.css" media="print" />
 
     <style>
@@ -1156,7 +1157,7 @@
     <script src="js/responsive-handler.js"></script>
     <script src="js/mobile-navigation.js"></script>
     <script src="js/mobile-forms.js"></script>
-    <script src="js/contrast-controls.js"></script>
+    <script src="js/contrast-controls-fixed.js"></script>
     <script src="js/haptic-feedback.js"></script>
     <script src="js/vibration-test.js"></script>
     <script src="js/swipe-navigation.js"></script>
