--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
     <link rel="stylesheet" href="css/swipe-navigation.css" />
     <link rel="stylesheet" href="css/contrast-improvements.css" />
     <link rel="stylesheet" href="css/mobile-fixes.css" />
+    <link rel="stylesheet" href="css/oxygen-section-contrast.css" />
     <link rel="stylesheet" href="css/print.css" media="print" />
 
     <style>
