--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <meta charset="UTF-8" />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=5.0, minimum-scale=1.0, user-scalable=yes, viewport-fit=cover"
+      content="width=device-width, initial-scale=1.0, maximum-scale=5.0, minimum-scale=1.0, user-scalable=yes, viewport-fit=cover, shrink-to-fit=no"
     />
-    <meta name="theme-color" content="#0078a8" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-touch-fullscreen" content="yes" />
+    <meta name="theme-color" content="#0078a8" />
     <meta
       name="apple-mobile-web-app-status-bar-style"
       content="black-translucent"
@@ -61,6 +62,8 @@
     <link rel="stylesheet" href="css/contrast-improvements.css" />
     <link rel="stylesheet" href="css/mobile-fixes.css" />
     <link rel="stylesheet" href="css/oxygen-section-contrast.css" />
+    <link rel="stylesheet" href="css/about-section-contrast.css" />
+    <link rel="stylesheet" href="css/ios-scroll-fix.css" />
     <link rel="stylesheet" href="css/print.css" media="print" />
 
     <style>
@@ -197,8 +200,7 @@
       }
     </style>
   </head>
-  <body>
-    <!-- Header -->
+  <body class="viewport-fix">
     <header>
       <div class="container header-container">
         <a href="#" class="logo">spa<span>-mobile</span></a>
@@ -1162,6 +1164,7 @@
     <script src="js/haptic-feedback.js"></script>
     <script src="js/vibration-test.js"></script>
     <script src="js/swipe-navigation.js"></script>
+    <script src="js/ios-scroll-fix.js"></script>
     <script src="js/main.js"></script>
     <script src="js/image-optimizations.js"></script>
   </body>
