--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
     <link rel="stylesheet" href="css/oxygen-section-contrast.css" />
     <link rel="stylesheet" href="css/about-section-contrast.css" />
     <link rel="stylesheet" href="css/ios-scroll-fix.css" />
+    <link rel="stylesheet" href="css/heading-structure.css" />
     <link rel="stylesheet" href="css/print.css" media="print" />
 
     <style>
@@ -900,7 +901,7 @@
               />
             </div>
             <div class="testimonial-content">
-              <h3>Sophie Dupont</h3>
+              <h3 aria-level="3" role="heading">Sophie Dupont</h3>
               <p class="testimonial-role">Cadre Supérieure</p>
               <p>
                 "Après des semaines de stress intense, la séance avec spa-mobile
@@ -926,7 +927,7 @@
               />
             </div>
             <div class="testimonial-content">
-              <h3>Thomas Martin</h3>
+              <h3 aria-level="3" role="heading">Thomas Martin</h3>
               <p class="testimonial-role">Athlète Professionnel</p>
               <p>
                 "En tant que sportif de haut niveau, la récupération est
@@ -952,7 +953,7 @@
               />
             </div>
             <div class="testimonial-content">
-              <h3>Marie Leroy</h3>
+              <h3 aria-level="3" role="heading">Marie Leroy</h3>
               <p class="testimonial-role">Entrepreneur</p>
               <p>
                 "J'ai offert une séance spa-mobile à toute mon équipe lors d'un
@@ -980,14 +981,14 @@
 
         <div class="contact-container">
           <div class="contact-info">
-            <h3>Informations de Contact</h3>
+            <h3 aria-level="3" role="heading">Informations de Contact</h3>
 
             <div class="contact-info-item">
               <div class="contact-icon">
                 <i class="fas fa-map-marker-alt"></i>
               </div>
               <div>
-                <h4>Notre Base</h4>
+                <h4 aria-level="4" role="heading">Notre Base</h4>
                 <p>123 Avenue du Bien-être<br />75000 Tunis</p>
               </div>
             </div>
@@ -997,7 +998,7 @@
                 <i class="fas fa-phone"></i>
               </div>
               <div>
-                <h4>Téléphone</h4>
+                <h4 aria-level="4" role="heading">Téléphone</h4>
                 <p>+33 1 23 45 67 89</p>
               </div>
             </div>
@@ -1007,7 +1008,7 @@
                 <i class="fas fa-envelope"></i>
               </div>
               <div>
-                <h4>Email</h4>
+                <h4 aria-level="4" role="heading">Email</h4>
                 <p>contact@spa-mobile.com</p>
               </div>
             </div>
@@ -1017,7 +1018,7 @@
                 <i class="fas fa-clock"></i>
               </div>
               <div>
-                <h4>Horaires de Réservation</h4>
+                <h4 aria-level="4" role="heading">Horaires de Réservation</h4>
                 <p>
                   Lundi - Vendredi: 9h - 20h<br />Samedi - Dimanche: 10h - 18h
                 </p>
@@ -1026,7 +1027,7 @@
           </div>
 
           <div class="contact-form">
-            <h3>Envoyez-nous un Message</h3>
+            <h3 aria-level="3" role="heading">Envoyez-nous un Message</h3>
 
             <form id="contact-form" data-haptic="true">
               <div class="form-group">
@@ -1081,7 +1082,7 @@
       <div class="container">
         <div class="footer-container">
           <div class="footer-col">
-            <h3>spa-mobile</h3>
+            <h3 aria-level="2" role="heading">spa-mobile</h3>
             <p>
               Votre oasis de bien-être mobile, offrant des soins thérapeutiques
               de qualité professionnelle où que vous soyez.
@@ -1102,7 +1103,7 @@
           </div>
 
           <div class="footer-col">
-            <h3>Liens Rapides</h3>
+            <h3 aria-level="2" role="heading">Liens Rapides</h3>
             <ul>
               <li><a href="#oxygeno">Oxygénothérapie</a></li>
               <li><a href="#concept">Le Concept</a></li>
@@ -1116,7 +1117,7 @@
           </div>
 
           <div class="footer-col">
-            <h3>Services</h3>
+            <h3 aria-level="2" role="heading">Services</h3>
             <ul>
               <li><a href="#oxygeno">Oxygénothérapie</a></li>
               <li><a href="#">Soins Thérapeutiques</a></li>
@@ -1128,7 +1129,7 @@
           </div>
 
           <div class="footer-col">
-            <h3>Newsletter</h3>
+            <h3 aria-level="2" role="heading">Newsletter</h3>
             <p>
               Abonnez-vous pour recevoir nos offres spéciales et nos conseils de
               bien-être.
@@ -1165,6 +1166,7 @@
     <script src="js/vibration-test.js"></script>
     <script src="js/swipe-navigation.js"></script>
     <script src="js/ios-scroll-fix.js"></script>
+    <script src="js/heading-structure.js"></script>
     <script src="js/main.js"></script>
     <script src="js/image-optimizations.js"></script>
   </body>
