--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <meta charset="UTF-8" />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=5.0, minimum-scale=1.0, user-scalable=yes, viewport-fit=cover, shrink-to-fit=no"
+      content="width=device-width, initial-scale=1.0, maximum-scale=5.0, minimum-scale=1.0, user-scalable=yes, viewport-fit=cover"
     />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-touch-fullscreen" content="yes" />
+    <meta name="mobile-web-app-capable" content="yes" />
     <meta name="theme-color" content="#0078a8" />
     <meta
       name="apple-mobile-web-app-status-bar-style"
@@ -64,7 +65,9 @@
     <link rel="stylesheet" href="css/oxygen-section-contrast.css" />
     <link rel="stylesheet" href="css/about-section-contrast.css" />
     <link rel="stylesheet" href="css/ios-scroll-fix.css" />
+    <link rel="stylesheet" href="css/android-scroll-fix.css" />
     <link rel="stylesheet" href="css/heading-structure.css" />
+    <link rel="stylesheet" href="css/footer-mobile-improvements.css" />
     <link rel="stylesheet" href="css/print.css" media="print" />
 
     <style>
@@ -201,7 +204,7 @@
       }
     </style>
   </head>
-  <body class="viewport-fix">
+  <body>
     <header>
       <div class="container header-container">
         <a href="#" class="logo">spa<span>-mobile</span></a>
@@ -1166,7 +1169,9 @@
     <script src="js/vibration-test.js"></script>
     <script src="js/swipe-navigation.js"></script>
     <script src="js/ios-scroll-fix.js"></script>
+    <script src="js/android-scroll-fix.js"></script>
     <script src="js/heading-structure.js"></script>
+    <script src="js/footer-mobile.js"></script>
     <script src="js/main.js"></script>
     <script src="js/image-optimizations.js"></script>
   </body>
