--- a/index.html
+++ b/index.html
@@ -57,17 +57,17 @@
     <link rel="stylesheet" href="css/performance-optimizations.css" />
     <link rel="stylesheet" href="css/accessibility-optimizations.css" />
     <link rel="stylesheet" href="css/contrast-optimizations.css" />
-    <link rel="stylesheet" href="css/contrast-controls-fixed.css" />
+    <link rel="stylesheet" href="css/contrast-controls-optimized.css" />
     <link rel="stylesheet" href="css/haptic-feedback.css" />
     <link rel="stylesheet" href="css/swipe-navigation.css" />
     <link rel="stylesheet" href="css/contrast-improvements.css" />
     <link rel="stylesheet" href="css/mobile-fixes.css" />
     <link rel="stylesheet" href="css/oxygen-section-contrast.css" />
     <link rel="stylesheet" href="css/about-section-contrast.css" />
-    <link rel="stylesheet" href="css/ios-scroll-fix.css" />
-    <link rel="stylesheet" href="css/android-scroll-fix.css" />
+    <link rel="stylesheet" href="css/mobile-scroll-fix.css" />
     <link rel="stylesheet" href="css/heading-structure.css" />
     <link rel="stylesheet" href="css/footer-mobile-improvements.css" />
+    <link rel="stylesheet" href="css/footer-mobile-fix.css" />
     <link rel="stylesheet" href="css/print.css" media="print" />
 
     <style>
@@ -1164,14 +1164,13 @@
     <script src="js/responsive-handler.js"></script>
     <script src="js/mobile-navigation.js"></script>
     <script src="js/mobile-forms.js"></script>
-    <script src="js/contrast-controls-fixed.js"></script>
+    <script src="js/contrast-controls-optimized.js"></script>
     <script src="js/haptic-feedback.js"></script>
     <script src="js/vibration-test.js"></script>
     <script src="js/swipe-navigation.js"></script>
-    <script src="js/ios-scroll-fix.js"></script>
-    <script src="js/android-scroll-fix.js"></script>
+    <script src="js/mobile-scroll-fix.js"></script>
     <script src="js/heading-structure.js"></script>
-    <script src="js/footer-mobile.js"></script>
+    <script src="js/footer-mobile-fix.js"></script>
     <script src="js/main.js"></script>
     <script src="js/image-optimizations.js"></script>
   </body>
